src/content/docs/0.10.0/guides/youtube.mdx
---
title: Youtube playback
description: Play music from youtube with rmpc
sidebar:
  order: 4
slug: 0.10.0/guides/youtube
---

import { Steps } from "@astrojs/starlight/components";

Rmpc can play videos from youtube, soundcloud and nicovideo, but needs a little setup before it
can do that. Only single songs can be added at a time.
For youtube, playlists are supported as well. Be careful though because executing `addyt` for
a playlist will start downloading all contained songs, this action might take some time to finish
and cannot be stopped except by terminating rmpc.

<Steps>
  1. Install [yt-dlp](https://github.com/yt-dlp/yt-dlp) and have it available in your PATH.
  2. Install [yt-dlp's dependencies](https://github.com/yt-dlp/yt-dlp?tab=readme-ov-file#dependencies): ffmpeg, ffprobe, python3 and python's mutagen library.
  3. Configure rmpc's cache directory [in your config file](/0.10.0/configuration/#cache_dir)
  4. Connect to MPD with a local socket and not IP address.
  5. Add music to the queue:
     <ul>
       <li><strong>From a URL (YouTube/SoundCloud/NicoVideo):</strong> <code>rmpc addyt \<url></code>  (TUI: <code>addyt \<url></code>)</li>
       <li><strong>Search by name (first result, YouTube):</strong> <code>rmpc searchyt "search terms"</code>  (TUI: <code>searchyt "search terms"</code>)</li>
       <li><strong>Search SoundCloud:</strong> <code>rmpc searchyt -s "search terms"</code>  (TUI: <code>searchyt -s "search terms"</code>)</li>
       <li><strong>Interactive pick (choose from a list):</strong> add <code>--interactive</code> (TUI opens a picker) — e.g. <code>rmpc searchyt --interactive "search terms"</code></li>
       <li><strong>Limit candidates:</strong> add <code>--limit \<N></code> to fetch the first N search results</li>
       <li><strong>Optional position:</strong> add <code>--position \<n|+n|-n></code> to enqueue at an absolute or relative position</li>
     </ul>
</Steps>

:::caution
MPD will not be able to add songs from outside its music directory if not connected through local socket.
:::

:::note
Tested with:

* yt-dlp 2024.07.25
* ffmpeg 7.0.1
:::

### Example

```bash title=mpd.conf frame=terminal
bind_to_address "/tmp/mpd_socket"
```

```rust title=rmpc/config.ron frame=terminal
(
    address: "/tmp/mpd_socket",
    cache_dir: Some("/tmp/rmpc/cache"),
    ...
)

```
